--- a/importer/PhotoImporter/PhotoImporter/Base.lproj/Main.storyboard
+++ b/importer/PhotoImporter/PhotoImporter/Base.lproj/Main.storyboard
@@ -23,7 +23,7 @@
                                 <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Hzm-Uf-gli">
+                            <button opaque="NO" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Hzm-Uf-gli">
                                 <rect key="frame" x="274" y="284" width="53" height="34"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="18"/>
                                 <state key="normal" title="Import">
@@ -33,13 +33,13 @@
                                     <action selector="importButtonPressed:" destination="vXZ-lx-hvc" eventType="touchUpInside" id="qxR-h7-817"/>
                                 </connections>
                             </button>
-                            <progressView opaque="NO" contentMode="scaleToFill" verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="NYt-S3-fn3">
+                            <progressView opaque="NO" contentMode="scaleToFill" verticalHuggingPriority="750" misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="NYt-S3-fn3">
                                 <rect key="frame" x="225" y="204" width="150" height="2"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="150" id="p2B-D2-lOh"/>
                                 </constraints>
                             </progressView>
-                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" text="/Users/hbridge/Pictures/Simulator" borderStyle="roundedRect" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="fsQ-e6-ZaV">
+                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" text="/Users/hbridge/Pictures/Simulator" borderStyle="roundedRect" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="fsQ-e6-ZaV">
                                 <rect key="frame" x="16" y="166" width="568" height="30"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="261" id="yeD-ZM-loW"/>
