--- a/strand/iOS/Strand/Strand/DFActivityFeedTableViewCell.xib
+++ b/strand/iOS/Strand/Strand/DFActivityFeedTableViewCell.xib
@@ -1,28 +1,29 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="6245" systemVersion="13E28" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
     <dependencies>
+        <deployment defaultVersion="1792" identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6238"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="0.0" rowHeight="155" id="lqR-Yk-QtK" customClass="DFActivityFeedTableViewCell">
-            <rect key="frame" x="0.0" y="0.0" width="320" height="155"/>
+            <rect key="frame" x="0.0" y="0.0" width="320" height="355"/>
             <autoresizingMask key="autoresizingMask"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="lqR-Yk-QtK" id="edi-gP-GBl">
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" userInteractionEnabled="NO" contentMode="scaleToFill" dataMode="none" translatesAutoresizingMaskIntoConstraints="NO" id="Kln-so-NCf">
-                        <rect key="frame" x="0.0" y="51" width="320" height="104"/>
+                        <rect key="frame" x="0.0" y="51" width="320" height="304"/>
                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                         <constraints>
-                            <constraint firstAttribute="height" constant="104" id="G94-zs-mtb"/>
+                            <constraint firstAttribute="height" constant="304" id="G94-zs-mtb"/>
                         </constraints>
-                        <collectionViewFlowLayout key="collectionViewLayout" scrollDirection="horizontal" minimumLineSpacing="4" minimumInteritemSpacing="4" id="F9p-PL-bzA">
-                            <size key="itemSize" width="104" height="104"/>
+                        <collectionViewFlowLayout key="collectionViewLayout" scrollDirection="horizontal" minimumLineSpacing="8" minimumInteritemSpacing="8" id="F9p-PL-bzA">
+                            <size key="itemSize" width="148" height="148"/>
                             <size key="headerReferenceSize" width="0.0" height="0.0"/>
                             <size key="footerReferenceSize" width="0.0" height="0.0"/>
-                            <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
+                            <inset key="sectionInset" minX="8" minY="0.0" maxX="8" maxY="0.0"/>
                         </collectionViewFlowLayout>
                     </collectionView>
                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="qA2-bH-hjM" customClass="DFProfilePhotoStackView" customModule="Strand" customModuleProvider="target">
@@ -34,46 +35,55 @@
                         </constraints>
                     </view>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="252" verticalHuggingPriority="251" text="Actor" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="rlM-Qb-grC">
-                        <rect key="frame" x="51" y="8" width="36" height="17"/>
-                        <fontDescription key="fontDescription" type="boldSystem" pointSize="14"/>
+                        <rect key="frame" x="51" y="8" width="35" height="17"/>
+                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
                         <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                         <nil key="highlightedColor"/>
                     </label>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="action text label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Ejx-vN-IUf">
-                        <rect key="frame" x="90" y="8" width="174" height="17"/>
+                        <rect key="frame" x="89" y="8" width="136" height="17"/>
                         <fontDescription key="fontDescription" type="system" pointSize="14"/>
                         <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                         <nil key="highlightedColor"/>
                     </label>
                     <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="IEd-zt-0Vr">
-                        <rect key="frame" x="272" y="6" width="40" height="40"/>
+                        <rect key="frame" x="233" y="6" width="40" height="40"/>
                         <constraints>
                             <constraint firstAttribute="height" constant="40" id="AR8-cB-w1k"/>
                             <constraint firstAttribute="width" constant="40" id="kuf-qt-i9m"/>
                         </constraints>
                     </imageView>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="time label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="pik-Vg-OiT">
-                        <rect key="frame" x="51" y="27" width="59" height="16"/>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="100d" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="pik-Vg-OiT">
+                        <rect key="frame" x="281" y="8" width="31" height="16"/>
                         <fontDescription key="fontDescription" type="system" pointSize="13"/>
                         <color key="textColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
                         <nil key="highlightedColor"/>
                     </label>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Subtitle label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="kFu-j8-B9v">
+                        <rect key="frame" x="51" y="24" width="174" height="17"/>
+                        <fontDescription key="fontDescription" type="boldSystem" pointSize="14"/>
+                        <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                        <nil key="highlightedColor"/>
+                    </label>
                 </subviews>
                 <constraints>
+                    <constraint firstItem="pik-Vg-OiT" firstAttribute="top" secondItem="edi-gP-GBl" secondAttribute="top" constant="8" id="3VA-5E-M8W"/>
                     <constraint firstAttribute="trailing" secondItem="Ejx-vN-IUf" secondAttribute="trailing" priority="900" constant="8" id="4H8-ec-053"/>
                     <constraint firstItem="Ejx-vN-IUf" firstAttribute="leading" secondItem="rlM-Qb-grC" secondAttribute="trailing" constant="3" id="4fU-Nj-v1i"/>
+                    <constraint firstItem="Ejx-vN-IUf" firstAttribute="trailing" secondItem="kFu-j8-B9v" secondAttribute="trailing" id="60a-KI-6MW"/>
                     <constraint firstItem="IEd-zt-0Vr" firstAttribute="leading" secondItem="Ejx-vN-IUf" secondAttribute="trailing" constant="8" id="67k-cJ-Soj"/>
                     <constraint firstItem="Kln-so-NCf" firstAttribute="top" secondItem="qA2-bH-hjM" secondAttribute="bottom" constant="8" id="6oc-R0-tZv"/>
+                    <constraint firstItem="qA2-bH-hjM" firstAttribute="centerY" secondItem="kFu-j8-B9v" secondAttribute="centerY" constant="-7" id="8eT-xQ-cui"/>
                     <constraint firstItem="Kln-so-NCf" firstAttribute="leading" secondItem="edi-gP-GBl" secondAttribute="leading" id="IFp-8u-UCX"/>
                     <constraint firstItem="rlM-Qb-grC" firstAttribute="leading" secondItem="qA2-bH-hjM" secondAttribute="trailing" constant="8" id="OCQ-XD-QZ5"/>
                     <constraint firstItem="qA2-bH-hjM" firstAttribute="leading" secondItem="edi-gP-GBl" secondAttribute="leading" constant="8" id="P3w-N6-QZQ"/>
-                    <constraint firstItem="pik-Vg-OiT" firstAttribute="leading" secondItem="qA2-bH-hjM" secondAttribute="trailing" constant="8" id="Pgk-x2-JKs"/>
+                    <constraint firstItem="kFu-j8-B9v" firstAttribute="leading" secondItem="qA2-bH-hjM" secondAttribute="trailing" constant="8" id="PKM-oM-NEp"/>
                     <constraint firstAttribute="trailing" secondItem="Kln-so-NCf" secondAttribute="trailing" id="abk-sf-CFr"/>
                     <constraint firstItem="qA2-bH-hjM" firstAttribute="top" secondItem="edi-gP-GBl" secondAttribute="top" constant="8" id="e4G-WQ-9xp"/>
                     <constraint firstItem="qA2-bH-hjM" firstAttribute="centerY" secondItem="rlM-Qb-grC" secondAttribute="centerY" constant="9" id="eZE-wl-yN4"/>
-                    <constraint firstAttribute="trailing" secondItem="IEd-zt-0Vr" secondAttribute="trailing" constant="8" id="ghb-Mq-pmT"/>
+                    <constraint firstAttribute="trailing" secondItem="IEd-zt-0Vr" secondAttribute="trailing" constant="47" id="ghb-Mq-pmT"/>
                     <constraint firstItem="qA2-bH-hjM" firstAttribute="centerY" secondItem="IEd-zt-0Vr" secondAttribute="centerY" constant="-0.5" id="hYW-n7-hze"/>
-                    <constraint firstItem="qA2-bH-hjM" firstAttribute="centerY" secondItem="pik-Vg-OiT" secondAttribute="centerY" constant="-9.5" id="j0t-or-gY8"/>
+                    <constraint firstAttribute="trailing" secondItem="pik-Vg-OiT" secondAttribute="trailing" constant="8" id="ltW-wi-5jp"/>
                     <constraint firstItem="Ejx-vN-IUf" firstAttribute="bottom" secondItem="rlM-Qb-grC" secondAttribute="bottom" id="qcE-XX-mgo"/>
                 </constraints>
             </tableViewCellContentView>
@@ -84,9 +94,10 @@
                 <outlet property="collectionView" destination="Kln-so-NCf" id="Wpj-xa-riQ"/>
                 <outlet property="previewImageView" destination="IEd-zt-0Vr" id="xDx-wF-OZZ"/>
                 <outlet property="profilePhotoStackView" destination="qA2-bH-hjM" id="A3d-AL-505"/>
+                <outlet property="subtitleLabel" destination="kFu-j8-B9v" id="m82-dR-CgV"/>
                 <outlet property="timeLabel" destination="pik-Vg-OiT" id="9xi-el-Ul3"/>
             </connections>
-            <point key="canvasLocation" x="-39" y="117.5"/>
+            <point key="canvasLocation" x="-39" y="116.5"/>
         </tableViewCell>
     </objects>
 </document>
