--- a/strand/iOS/Strand/Strand/DFCreateStrandViewController.xib
+++ b/strand/iOS/Strand/Strand/DFCreateStrandViewController.xib
@@ -1,26 +1,70 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="6245" systemVersion="13E28" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES">
     <dependencies>
+        <deployment defaultVersion="1792" identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6238"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="DFCreateStrandViewController">
             <connections>
-                <outlet property="view" destination="KYO-2q-Y2p" id="WEK-zH-pPM"/>
+                <outlet property="reloadBackground" destination="FCq-o3-f9O" id="7e4-Ky-FGe"/>
+                <outlet property="tableView" destination="KYO-2q-Y2p" id="05b-FU-gkU"/>
+                <outlet property="view" destination="u3X-ZH-sCM" id="PuK-Zh-YmK"/>
             </connections>
         </placeholder>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" style="grouped" separatorStyle="none" rowHeight="167" sectionHeaderHeight="10" sectionFooterHeight="10" id="KYO-2q-Y2p">
-            <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
-            <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-            <color key="backgroundColor" cocoaTouchSystemColor="groupTableViewBackgroundColor"/>
-            <nil key="simulatedStatusBarMetrics"/>
-            <connections>
-                <outlet property="dataSource" destination="-1" id="Tci-FG-SLF"/>
-                <outlet property="delegate" destination="-1" id="FK1-w9-LHY"/>
-            </connections>
-        </tableView>
+        <view contentMode="scaleToFill" id="u3X-ZH-sCM">
+            <rect key="frame" x="0.0" y="64" width="320" height="568"/>
+            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+            <subviews>
+                <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" style="grouped" separatorStyle="none" rowHeight="167" sectionHeaderHeight="10" sectionFooterHeight="10" translatesAutoresizingMaskIntoConstraints="NO" id="KYO-2q-Y2p">
+                    <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
+                    <color key="backgroundColor" cocoaTouchSystemColor="groupTableViewBackgroundColor"/>
+                    <connections>
+                        <outlet property="dataSource" destination="-1" id="Tci-FG-SLF"/>
+                        <outlet property="delegate" destination="-1" id="FK1-w9-LHY"/>
+                    </connections>
+                </tableView>
+                <view hidden="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="FCq-o3-f9O">
+                    <rect key="frame" x="69" y="0.0" width="183" height="46"/>
+                    <subviews>
+                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="gzA-Va-82T">
+                            <rect key="frame" x="25" y="12" width="133" height="22"/>
+                            <fontDescription key="fontDescription" type="system" pointSize="18"/>
+                            <state key="normal" title=" Tap to Reload" image="Assets/Icons/RefreshButtonIcon">
+                                <color key="titleColor" red="0.098039224743843079" green="0.58039218187332153" blue="0.9803922176361084" alpha="1" colorSpace="deviceRGB"/>
+                                <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                            </state>
+                            <connections>
+                                <action selector="reloadButtonPressed:" destination="-1" eventType="touchUpInside" id="Bjk-nt-Eg2"/>
+                            </connections>
+                        </button>
+                    </subviews>
+                    <color key="backgroundColor" white="1" alpha="0.80000000000000004" colorSpace="calibratedWhite"/>
+                    <constraints>
+                        <constraint firstAttribute="width" constant="183" id="NDI-Uu-T7q"/>
+                        <constraint firstAttribute="centerY" secondItem="gzA-Va-82T" secondAttribute="centerY" id="WGW-iQ-sbj"/>
+                        <constraint firstAttribute="centerX" secondItem="gzA-Va-82T" secondAttribute="centerX" id="sFO-qJ-wb6"/>
+                        <constraint firstAttribute="height" constant="46" id="zlm-FY-KvD"/>
+                    </constraints>
+                </view>
+            </subviews>
+            <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+            <constraints>
+                <constraint firstItem="FCq-o3-f9O" firstAttribute="top" secondItem="u3X-ZH-sCM" secondAttribute="top" id="39B-S0-s6v"/>
+                <constraint firstItem="KYO-2q-Y2p" firstAttribute="leading" secondItem="u3X-ZH-sCM" secondAttribute="leading" id="LhR-QU-JUX"/>
+                <constraint firstItem="KYO-2q-Y2p" firstAttribute="top" secondItem="u3X-ZH-sCM" secondAttribute="top" id="Vcc-bR-1jT"/>
+                <constraint firstAttribute="bottom" secondItem="KYO-2q-Y2p" secondAttribute="bottom" id="Vrv-31-y9L"/>
+                <constraint firstAttribute="trailing" secondItem="KYO-2q-Y2p" secondAttribute="trailing" id="ZhG-st-6MJ"/>
+                <constraint firstAttribute="centerX" secondItem="FCq-o3-f9O" secondAttribute="centerX" id="dr4-Ix-Oyx"/>
+            </constraints>
+            <nil key="simulatedTopBarMetrics"/>
+            <point key="canvasLocation" x="554" y="220"/>
+        </view>
     </objects>
+    <resources>
+        <image name="Assets/Icons/RefreshButtonIcon" width="16" height="16"/>
+    </resources>
     <simulatedMetricsContainer key="defaultSimulatedMetrics">
         <simulatedStatusBarMetrics key="statusBar"/>
         <simulatedOrientationMetrics key="orientation"/>
